--- a/public/style.css
+++ b/public/style.css
@@ -113,3 +113,39 @@ input[type="range"] {
     flex: 1 1 0;
     min-width: 0;
 }
+
+
+
+#errorContainer {
+    pointer-events: none;
+    opacity: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #0007;
+    text-align: center;
+    transition: opacity 0.5s;
+}
+
+
+#errorContainer.visible {
+    pointer-events: auto;
+    opacity: 1;
+}
+
+
+.errorBox {
+    background-color: #f00;
+    border: 1px solid black;
+    display: inline-block;
+    padding: 1em;
+    margin-top: 5em;
+    text-align: left;
+}
+
+
+#errorMessage {
+    white-space: pre;
+}
