--- a/public/style.css
+++ b/public/style.css
@@ -44,6 +44,7 @@ html, body {
     overflow: none;
     background-color: #67b;
     position: relative;
+    z-index: 1;
 }
 
 #settingsContainer.expanded {
@@ -101,6 +102,7 @@ input[type="range"] {
     cursor: pointer;
     background: #347 url("expand.svg") center no-repeat / contain;
     border-right: 1px solid #000;
+    z-index: 1;
 }
 
 #settingsContainer.expanded + #expand {
@@ -112,6 +114,21 @@ input[type="range"] {
 #render {
     flex: 1 1 0;
     min-width: 0;
+}
+
+.status {
+    flex: 0 0 0;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 0.7em 1.5em;
+    background-color: #347;
+    border-left: 1px solid #000;
+    border-top: 1px solid #000;
+}
+
+#moves {
+    margin-right: 1em;
 }
 
 
@@ -133,6 +150,7 @@ input[type="range"] {
 #errorContainer.visible {
     pointer-events: auto;
     opacity: 1;
+    z-index: 2;
 }
 
 
